# wofrysrw

./: .gitignore  README.txt  pyproject.toml  setup.py
wofrysrw/beamline/: srw_beamline.py
wofrysrw/beamline/optical_elements/: srw_optical_element.py
wofrysrw/beamline/optical_elements/absorbers/: srw_beam_stopper.py  srw_filter.py  srw_slit.py  srw_transmission.py
wofrysrw/beamline/optical_elements/crystals/: srw_crystal.py
wofrysrw/beamline/optical_elements/gratings/: srw_elliptical_grating.py  srw_grating.py  srw_plain_grating.py
wofrysrw/beamline/optical_elements/ideal_elements/: srw_screen.py
wofrysrw/beamline/optical_elements/mirrors/: srw_elliptical_mirror.py  srw_hyperbolic_mirror.py  srw_mirror.py  srw_paraboloid_mirror.py  srw_plane_mirror.py  srw_spherical_mirror.py  srw_toroidal_mirror.py
wofrysrw/beamline/optical_elements/other/: srw_crl.py  srw_crl_barc4ro.py
wofrysrw/propagator/propagators2D/: srw_fresnel.py  srw_fresnel_native.py  srw_fresnel_wofry.py
wofrysrw/propagator/wavefront2D/: srw_wavefront.py
wofrysrw/srw/: __init__.py
wofrysrw/storage_ring/: srw_electron_beam.py  srw_light_source.py  srw_magnetic_structure.py
wofrysrw/storage_ring/light_sources/: srw_bending_magnet_light_source.py  srw_undulator_light_source.py  srw_wiggler_light_source.py
wofrysrw/storage_ring/magnetic_structures/: srw_bending_magnet.py  srw_undulator.py  srw_wiggler.py
wofrysrw/storage_ring/test/: bending_magnet_test.py  undulator_test.py  wiggler_test.py
wofrysrw/util/: srw.py  srw_absorption.py  srw_util.py
