[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wofrysrw"
version = "1.1.43"
description = "WOFRY for SRW library"
readme = "README.md"

# TODO: confirm the exact GPL variant (the old setup.py just said 'GPLv3',
# and there is no License:: classifier here to cross-check against).
license = "GPL-3.0-or-later"
# license = "GPL-3.0-only"      # <- if the source headers say "version 3" only
# license-files = ["LICENSE"]   # <- uncomment if a LICENSE file exists in the repo

authors = [
    { name = "Luca Rebuffi", email = "lrebuffi@anl.gov" },
]
keywords = [
    "dictionary",
    "glossary",
    "synchrotron",
    "simulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Console",
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "setuptools",
    "wofry>=1.0.36",
    "srwpy==4.2.1",
    "oasys-barc4ro>=2026.7.16",
]

[project.urls]
Homepage = "https://github.com/lucarebuffi/wofrysrw"
Download = "https://github.com/lucarebuffi/wofrysrw"

[tool.setuptools]
include-package-data = true
zip-safe = false

# NOTE: this mirrors the old setup.py, which shipped ONLY the top-level
# "wofrysrw" package -- no subpackages. See chat notes: if wofrysrw has
# subdirectories with __init__.py, they have never been installed. If so,
# delete the two lines below and uncomment the [tool.setuptools.packages.find]
# block instead.
packages = ["wofrysrw"]

# [tool.setuptools.packages.find]
# include = ["wofrysrw*"]